fix: apply discount code to cart and checkout